--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,68 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    {%- include head.html -%}
-  </head>
+<html lang="en" class="ace ace-card-on ace-tab-nav-on ace-main-nav-on ace-sidebar-on" data-theme-color="#c0e3e7">
+  {% include head.html %}
   <body>
-    <main class="container">
-      <section class="about">
-        <a href="/"><img src="{{ "/assets/portfolio.png" | relative_url }}" alt="{{ site.plainwhite.name }}"></a>
-        <h2 id="title">
-          <a href="/">{{ site.plainwhite.name }}</a>
-        </h2>
-        <p class="tagline">{{ site.plainwhite.tagline }}</p>
-        <ul class="social">
-          {%- if site.plainwhite.social_links.github -%}
-            <a href="https://github.com/{{ site.plainwhite.social_links.github }}">
-              <li>
-                <i class="icon-github-circled"></i>
-              </li>
-            </a>
-          {%- endif -%}
-          {%- if site.plainwhite.social_links.linkedIn -%}
-            <a href="https://www.linkedin.com/{{ site.plainwhite.social_links.linkedIn }}">
-              <li>
-                <i class="icon-linkedin-squared"></i>
-              </li>
-            </a>
-          {%- endif -%}
-          {%- if site.plainwhite.social_links.twitter -%}
-            <a href="https://twitter.com/{{ site.plainwhite.social_links.twitter }}">
-              <li>
-                <i class="icon-twitter-squared"></i>
-              </li>
-            </a>
-          {%- endif -%}
-        </ul>
+    <div class="ace-wrapper">
+      
+      <header id="ace-header" class="ace-container-shift ace-logo-in ace-head-boxed ace-nav-right">
+         <div class="ace-head-inner">
+         </div>
+      </header>
 
-        {%- if site.plainwhite.navigation -%}
-          <nav class="navigation">
-            <ul>
-              {% for link in site.plainwhite.navigation %}
-                <li>
-                  <a href="{{ link.url }}">{{ link.title }}</a>
-                </li>
-              {% endfor %}
-            </ul>
-          </nav>
-        {%- endif -%}
+      {% include personal.html %}
 
-        <p>&copy;
-          {{ "now" | date: "%Y" }}</p>
-      </section>
-      <section class="content">
-        {{ content }}
-      </section>
-    </main>
-    {%- if site.plainwhite.analytics_id -%}
-      <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.plainwhite.analytics_id }}"></script>
-      <script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag() { dataLayer.push(arguments); }
-		gtag('js', new Date());
+      {{ content }}
+      
+      {% include footer.html %}
+    
+    </div><!-- .ace-wrapper -->
 
-		gtag('config', '{{ site.plainwhite.analytics_id }}');
-	</script>
-    {%- endif -%}
+    <!-- Scripts -->
+    <script type="text/javascript" src="{{ '/styles/js/vendor/jquery-1.12.4.min.js' | prepend: site.baseurl }}"></script>
+    <script type="text/javascript" src="{{ '/styles/js/plugins/highlight/highlight.pack.js' | prepend: site.baseurl }}"></script>
+    <script type="text/javascript" src="{{ '/styles/js/plugins/jquery.mCustomScrollbar.min.js' | prepend: site.baseurl }}"></script>
+    <script type="text/javascript" src="{{ '/styles/js/plugins/isotope.pkgd.min.js' | prepend: site.baseurl }}"></script>
+    <script type="text/javascript" src="{{ '/styles/js/plugins/progressbar.min.js' | prepend: site.baseurl }}"></script>
+    <script type="text/javascript" src="{{ '/styles/js/plugins/slick.min.js' | prepend: site.baseurl }}"></script>
+
+    <script type="text/javascript" src="{{ '/styles/js/options.js' | prepend: site.baseurl }}"></script>
+    <script type="text/javascript" src="{{ '/styles/js/main.js' | prepend: site.baseurl }}"></script>
+
   </body>
 </html>
